# simplembed

./: .gitignore  Cargo.toml  test.env
examples/: onnx.rs
pgem/: Cargo.toml  pgem.control
pgem/src/: lib.rs
sentence/: Cargo.toml
sentence/src/: baichuan.rs  bert.rs  lib.rs
src/: main.rs
textembedding/: .gitignore  Cargo.toml
textembedding/src/: baichuan.rs  bert.rs  embeddings.rs  lib.rs
util/: Cargo.toml
util/src/: lib.rs
visual/: Cargo.toml
visual/src/: lib.rs  vgg.rs  visual.rs
